--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -50,3 +50,29 @@ body {
   background: #00c968;
 
 }
+
+.spa {
+
+  background-size: cover;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  width: 100vw;
+  height: 100vh;
+  position: relative;
+  overflow: hidden;
+
+}
+
+.spa .container {
+
+  overflow: auto;
+  height: 85vh;
+  width: 80vw;
+  background-color: #fff;
+  border-radius: 17px 17px 0 0;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+
+}
