--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -74,5 +74,37 @@ body {
   bottom: 0;
   left: 50%;
   transform: translateX(-50%);
+  padding: 15px 20px 0;
+
+}
+
+.spa .container h1.spa-name {
+
+  font-size: 32px;
+  margin: 0 0 10px 0;
+  font-weight: 500;
+
+}
+
+.spa .container h2 {
+
+  color: #9c9c9c;
+  font-size: 20px;
+  margin: 0 0 7px 0;
+  font-weight: 400;
+
+}
+
+.spa .container p {
+
+  font-size: 17px;
+
+}
+
+.spa .container h1.subtitle {
+
+  font-size: 24px;
+  margin: 0 0 8px 0;
+  font-weight: 500;
 
 }
