--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -96,6 +96,7 @@ body {
 
   display: inline-block;
   margin: 10px;
+  height: 200px;
   cursor: pointer;
   -webkit-transition: all .3s;
   -moz-transition: all .3s;
@@ -152,6 +153,11 @@ body {
 
 @media screen and (max-width: 790px) {
 
+  .spa .container .galery img {
 
+    height: auto;
+    width: 100%;
+
+  }
 
 }
