--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -119,6 +119,46 @@ body {
 
 }
 
+.header {
+
+  background-color: #fff;
+  position: fixed;
+  z-index: 100000000;
+  border-radius: 12px;
+  padding: 11px 22px;
+  top: 10px;
+  right: 10px;
+  box-shadow: 0 1px 5px rgba(0, 0, 0, .65);
+  -webkit-box-shadow: 0 1px 5px rgba(0, 0, 0, .65);
+
+}
+
+.header img {
+
+  height: 30px;
+  width: 30px;
+  display: inline-block;
+  vertical-align: middle;
+
+}
+
+.header h1 {
+
+  font-size: 32px;
+  display: inline-block;
+  margin: 0;
+  vertical-align: middle;
+  font-weight: 400;
+
+}
+
+.header h1 span {
+
+  font-size: 15px;
+  color: #9c9c9c;
+
+}
+
 @keyframes show-panel {
 
   from {
