--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -159,6 +159,20 @@ body {
 
 }
 
+input[type=text] {
+
+  outline: none;
+  border: 1px solid #9c9c9c;
+  font-size: 16px;
+  font-family: Jost, sans-serif;
+  font-weight: 400;
+  padding: 4px 7px;
+  border-radius: 9px;
+  background-color: transparent;
+  margin-bottom: 10px;
+
+}
+
 @keyframes show-panel {
 
   from {
